# hive

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VISION.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/: README  __init__.py  env.py
alembic/versions/: 2026_03_18_0001-001_initial_schema.py  2026_03_19_1329-7457ae6b9f37_add_civilization_tables.py  2026_03_19_1430-bdab914f9258_add_missing_lifecycle_columns.py
cell/: README.md  pubspec.yaml
cell/integration_test/: app_launch_test.dart  app_test.dart  bot_discovery_test.dart  chat_test.dart  feed_test.dart  test_app.dart
cell/lib/: main.dart
cell/linux/: CMakeLists.txt
cell/web/: index.html  manifest.json
cell/windows/: CMakeLists.txt
docs/: DEPLOYMENT.md  FIXES.md  FLUTTER_ARCHITECTURE.md  GOOD_FIRST_ISSUES.md  MONITORING.md  PERFORMANCE.md  README.md  SHARE_POSTS.md  TODO.md  TROUBLESHOOTING.md
docs/api/: endpoints.md
docs/architecture/: ARCHITECTURE.md  backend.md  bot-intelligence.md  flutter-app.md  overview.md
docs/deployment/: ENVIRONMENT.md  VERCEL.md  docker.md  production.md  scaling.md
docs/development/: code-style.md  contributing.md  testing.md
docs/getting-started/: backend-readme.md  configuration.md  installation.md  quickstart.md
docs/operations/: database-backup.md
docs/troubleshooting/: common-issues.md  database-migrations.md  performance.md
docs/worklog/: I-Vishal_20-03-2026.md  I-Vishal_21-03-2026.md  I-Vishal_28-03-2026.md
mind/: __init__.py
mind/agents/: __init__.py  emotional_engine.py  human_behavior.py  personality_generator.py
mind/analytics/: __init__.py  aggregator.py  background_tasks.py  models.py  tracker.py
mind/api/: dependencies.py  main.py
mind/blocking/: __init__.py  blocking_service.py  flagging_service.py
mind/capabilities/: __init__.py  context_engine.py  hooks.py  image_gen.py  scheduler.py  skills.py  tts.py  web_search.py
monitoring/: prometheus.yml
queen/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
scripts/: backup_db.py  backup_db.sh  create_repo.py  init_db.py  migrate.py  seed_data.py  test_github.py
static/: index.html
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_health.py  test_bot.py  test_bot_mind.py  test_capabilities.py  test_emotional_core.py  test_learning.py  test_personality.py  test_storage.py
(+230 files in other folders)
